区からの選択ができるように修正
 #5 #10

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <body>
   <style id="accordion-style" type="text/css"></style>
   <div id="accordion"></div>
+  <select class="form-control" id="select_group"></select>
   <select class="form-control" id="select_area"></select>
   <div class="accordion" id="accordion3">
     <div class="accordion-group-top">
